2010-05-05  Alexey Proskuryakov  <ap@apple.com>

        Roll out r58830 for breaking tests.

        Was: https://bugs.webkit.org/show_bug.cgi?id=38546
        Node.focus() fails to move focus from subframe properly

        * html/HTMLFrameElementBase.cpp:
        (WebCore::HTMLFrameElementBase::setFocus):

2010-05-05  Jian Li  <jianli@chromium.org>

        Reviewed by Adam Barth.

        Implement FileReader class.
        https://bugs.webkit.org/show_bug.cgi?id=38157

        This patch only contains the implementation of FileReader class as defined
        in the File API spec: http://www.w3.org/TR/file-upload/#dfn-filereader.

        New test will be added when a IDL is exposed and the FILE_READER is turned
        on.

        * GNUmakefile.am:
        * WebCore.gypi:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * dom/EventNames.h:
        * dom/EventTarget.cpp:
        (WebCore::EventTarget::toFileReader):
        * dom/EventTarget.h:
        * html/FileError.h:
        (WebCore::FileError::FileError):
        * html/FileReader.cpp: Added.
        * html/FileReader.h: Added.
        * html/FileStream.cpp:
        (WebCore::FileStream::FileStream):
        (WebCore::FileStream::openForRead):
        (WebCore::FileStream::close):
        (WebCore::FileStream::read):
        * html/FileStream.h:

2010-05-05  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Maciej Stachowiak.

        REGRESSION(r57969) Image decoder is repeatedly destroyed/created in CoreGraphics-based Windows WebKit
        https://bugs.webkit.org/show_bug.cgi?id=38595

        * platform/graphics/cg/ImageSourceCG.cpp:
        (WebCore::ImageSource::setData):

2010-05-05  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Adele Peterson.

        https://bugs.webkit.org/show_bug.cgi?id=38546
        Node.focus() fails to move focus from subframe properly
